--- a/requirements.txt
+++ b/requirements.txt
@@ -114,7 +114,7 @@ munch==4.0.0
 mysql-connector-python==8.0.26
 nacos-sdk-python==2.0.1
 networkx==3.4.2
-openai==1.68.2
+#openai==1.68.2
 opentelemetry-api==1.31.1
 orjson==3.10.3
 packaging==24.1
