--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 ENV=dev
 LOCUST_SKIP_MONKEY_PATCH=True
+MYSQL_SERVER=autohub
+MYSQL_PASSWORD=autohub
+MYSQL_PORT=8026
+MYSQL_DATABASE=autohub
+REDIS_SERVER=autohub
+REDIS_PASSWORD=autohub
+REDIS_PORT=6379
