--- a/requirements.txt
+++ b/requirements.txt
@@ -187,7 +187,7 @@ ujson==5.10.0
 urllib3==2.2.1
 urwid==2.6.16
 uvicorn==0.30.1
-uvloop==0.19.0
+uvloop==0.19.0; sys_platform != 'win32'
 vine==5.1.0
 watchfiles==0.22.0
 wcwidth==0.2.13
