--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 ENV=dev
 LOCUST_SKIP_MONKEY_PATCH=True
-MYSQL_SERVER=autohub
-MYSQL_PASSWORD=autohub
+MYSQL_SERVER=192.168.17.6
+MYSQL_PASSWORD=chxxx2023.
 MYSQL_PORT=8026
-MYSQL_DATABASE=autohub
-REDIS_SERVER=autohub
-REDIS_PASSWORD=autohub
+MYSQL_DATABASE=3autohub
+REDIS_SERVER=192.168.17.6
+REDIS_PASSWORD=Cxxxx2023..
 REDIS_PORT=6379
